Fixed all of the links on the site. Have them pointing to index.html instead of aboutMe.html

--- a/photoGallery.html
+++ b/photoGallery.html
@@ -12,7 +12,7 @@
 		<p></p>
 		<table style="width:100%">
 			<tr>
-				<th><a href="aboutMe.html">About Me</a></th>
+				<th><a href="index.html">About Me</a></th>
 				<th><a href="myResume.html">My Resume</a></th>
 				<th><a href="myProjects.html">My Projects</a></th>
 				<th><a href="photoGallery.html">Photo Gallery</a></th>
