--- a/myProjects.html
+++ b/myProjects.html
@@ -15,6 +15,8 @@
 				<th><a href="index.html">About Me</a></th>
 				<th><a href="myResume.html">My Resume</a></th>
 				<th><a href="myProjects.html">My Projects</a></th>
+                                <th><a href="photoGallery.html">Photo Gallery</a></th>
+
 			</tr>
 		</table>
 	</div>
