--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
 <div class="sideBar">
     <div class="myPhoto">
-	    <img src="Photo_I_Use_for_Every_Profile.jpg" alt="My Beautiful Face" width=125%;>
+	    <img src="Images/Photo_I_Use_for_Every_Profile.jpg" alt="My Beautiful Face" width=125%;>
 	</div>
 	<div class="contactBox">
 		<div class="quickInfo">
@@ -33,11 +33,25 @@
 			<p>Manhattan College</p>
 			<p>Pursuing B.S. in Computer Science</p>
 		</div>
+		<div class="skills">
+			<p>Noteworthy Skills-</p>
+			<p>C++    Java</p>
+			<p>Python Linux</p>
+			<p>Html   CSS</p>
+
+		</div>
 		<div class="contactInfo">
 			<p>Contact Me-</p>
 			<p>Phone- 443-465-3534</p>
 			<p>Email- jfitzsimmons01@manhattan.edu</p>
 		        <p>Instagram- j.fitz501</p>
+		</div>
+		<div class="contactForm">
+			<form>
+				<label for="name">Name: </label><input required type="text" id="name" name="user_name"><br>
+				<label for="email">Email: </label><input required type="text" id="email" name="email_address">
+				<label for="message">Message: </label><input required type="text" id="message" name="message">
+			</form>
 		</div>
 	</div>
 </div>
