--- a/myResume.html
+++ b/myResume.html
@@ -22,7 +22,7 @@
 </div>
 <div class="sideBar">
     <div class="myPhoto">
-	    <img src="Photo_I_Use_for_Every_Profile.jpg" alt="My Beautiful Face" width=125%;>
+	    <img src="Images/Photo_I_Use_for_Every_Profile.jpg" alt="My Beautiful Face" width=125%;>
 	</div>
 	<div class="contactBox">
 		<div class="quickInfo">
@@ -32,6 +32,12 @@
 			<p>John Fitzsimmons</p>
 			<p>Manhattan College</p>
 			<p>Pursuing B.S. in Computer Science</p>
+		</div>	
+		<div class="skills">
+			<p>Noteworthy Skills-</p>
+			<p>C++    Java</p>
+			<p>Python Linux</p>
+			<p>Html   CSS</p>                            
 		</div>
 		<div class="contactInfo">
 			<p>Contact Me-</p>
