Big update- Fixed photoGallery, added JavaScript directory, Wen is screaming for some reason, basic JS alert on main page

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 
 <html>
 <head>
-    <link rel="stylesheet" href="styleIndex.css">
+        <link rel="stylesheet" href="styleIndex.css">
 	<title>John Fitzsimmons</title>
+        <script type="text/javascript" src="JavaScript/My_Alert_File.js"></script>
+	
 </head>
 
 <body>
@@ -35,10 +37,9 @@
 		</div>
 		<div class="skills">
 			<p>Noteworthy Skills-</p>
-			<p>C++    Java</p>
-			<p>Python Linux</p>
-			<p>Html   CSS</p>
-
+                        <p>C++    Java</p>
+                        <p>Python Linux</p>
+                        <p>Html   CSS</p>        
 		</div>
 		<div class="contactInfo">
 			<p>Contact Me-</p>
