Added php directory

--- a/index.html
+++ b/index.html
@@ -49,9 +49,20 @@
 		</div>
 		<div class="contactForm">
 			<form>
-				<label for="name">Name: </label><input required type="text" id="name" name="user_name"><br>
-				<label for="email">Email: </label><input required type="text" id="email" name="email_address">
-				<label for="message">Message: </label><input required type="text" id="message" name="message">
+				<table> 
+					<tr>
+						<th><label for="name">Name: </label>
+						<th><input required type="text" id="name" name="user_name"></th>
+					</tr>
+					<tr>
+                                        	<th><label for="email">Email: </label>
+                                        	<th><input required type="text" id="email" name="email_address"></th>
+                                        </tr>
+					<tr>
+                                        	<th><label for="message">Message: </label>
+                                        	<th><input required type="text" id="message" name="message"></th>
+                                        </tr>
+				</table>
 			</form>
 		</div>
 	</div>
