Major text additions to every page of the site

--- a/photoGallery.html
+++ b/photoGallery.html
@@ -50,7 +50,7 @@
 <div class="mainSpaceBackground">
 	<div class="mainSpace">
 		<div class="mainSpaceText">
-				<p></p>
+				<p>Here are some nice photos of me, feel free to follow me on Instagram for more!</p>
 				<table style="width:100%">
 					<tr>
 						<th><img src="Images/Manhattan.jpg" alt="Manhattan" width="330"></th>
